# halfplane

./: .gitignore  Makefile  README.md  README.rst  setup.cfg
examples/: example1.py  example3.py
src/halfplane/: common_shapes.py  core.py  flat.py  generic_structs.py  io.py  plots.py  shape_gen.py
src/halfplane/run/: show_esum.py  show_groups.py  show_lines_3d.py  show_phases.py  show_segments.py  show_segments_3d.py  slides.py
src/halfplane/run/perf/: meas_complexity.py  plain_detect.py
src/hyperplane/: common_shapes.py  core.py  flat.py  flat2.py  generic_structs.py  io.py  plots.py  shape_gen.py  viz.py  viz2.py
src/hyperplane/run/: analyze.py  dump_samples.py  perf_test.py  show_esum.py  show_groups.py  show_lines_3d.py  show_phases.py  show_segments.py  show_segments_3d.py  show_vertices.py  slides.py
src/hyperplane/run/perf/: meas_complexity.py  plain_detect.py
src/hyperplane/v3/: flat.py
src/hyperplane/v4/: flat.py  plots.py
tests/hyperplane/: test_core.py  test_flat.py  test_flat2.py  test_generic_structs.py  test_properties.py  test_regression.py
tests/hyperplane/v3/: test_flat.py
tests/hyperplane/v4/: test_flat.py
