[metadata]
name = halfplane
version = 0.0.1
author = Alexander Juda
# author_email = author@example.com
# description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
# url = https://github.com/pypa/sampleproject
# project_urls =
#     Bug Tracker = https://github.com/pypa/sampleproject/issues
# classifiers =
#     Programming Language :: Python :: 3
#     License :: OSI Approved :: MIT License
#     Operating System :: OS Independent

[options]
# No need to specify package_dir or :find, because newer
# versions of setuptools provide automatic discovery.
# https://setuptools.pypa.io/en/latest/userguide/package_discovery.html#automatic-discovery
install_requires =
    numpy
    matplotlib
    more-itertools
    plotly
    pandas
    sortedcontainers
    tqdm

[options.extras_require]
dev =
    isort
    pytest
    hypothesis[numpy]
    snakeviz

[flake8]
max-line-length = 89
